--- a/development/load-balancer/nginx.conf.conf
+++ b/development/load-balancer/nginx.conf.conf
@@ -118,6 +118,26 @@ http {
 		}
 	}
 
+  server {
+		server_name *.$TEST_DOMAIN;
+
+		proxy_redirect off;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+		error_page 502 /502LocalTest.html;
+
+		location = / {
+			proxy_pass http://am.ui.local.altinn.cloud/Home/;
+		}
+
+		location /502Accessmanagement.html {
+			root /www;
+		}
+
+	}
+
 	server {
 		server_name $TEST_DOMAIN;
 
