--- a/src/development/loadbalancer/nginx.conf
+++ b/src/development/loadbalancer/nginx.conf
@@ -54,12 +54,12 @@ http {
     }
 
     upstream accessmanagementcomp {
-        server host.docker.internal:5117;
+        server host.docker.internal:5110;
     }
 
     server {
 		    listen 80 default_server;
-        server_name ${TEST_DOMAIN};
+        server_name ${TEST_DOMAIN} *.${TEST_DOMAIN};
 
         proxy_redirect      off;
         proxy_set_header    Host $host;
@@ -91,7 +91,7 @@ http {
 		}
 
     location /accessmanagement/ {
-			  proxy_pass		      http://accessmanagementcomp/accessmanagement/;
+			  proxy_pass		      http://am.ui.local.altinn.cloud/home/;
         error_page 502 /502Accessmanagement.html;
 		}
 
