--- a/.github/workflows/push-to-cdn.yml
+++ b/.github/workflows/push-to-cdn.yml
@@ -24,7 +24,7 @@ jobs:
           fetch-depth: 0
 
       - name: 'Installing Dependencies'
-        uses: ./.github/actions/yarn-install
+        uses: ./altinn-studio/.github/actions/yarn-install
 
       - name: 'Building'
         run: yarn build
