--- a/.github/workflows/push-to-cdn.yml
+++ b/.github/workflows/push-to-cdn.yml
@@ -20,10 +20,11 @@ jobs:
       - name: 'Checking Out Code'
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          path: studio
+          fetch-depth: 1
 
       - name: 'Installing Dependencies'
-        uses: ./.github/actions/yarn-install
+        uses: ./studio/.github/actions/yarn-install
 
       - name: 'Building'
         run: yarn build
