working-directory for build

--- a/.github/workflows/push-to-cdn.yml
+++ b/.github/workflows/push-to-cdn.yml
@@ -27,6 +27,7 @@ jobs:
         uses: ./studio/.github/actions/yarn-install
 
       - name: 'Building'
+        working-directory: studio
         run: yarn build
 
       - name: Checkout Altinn-CDN repository
