--- a/.github/actions/yarn-install/action.yaml
+++ b/.github/actions/yarn-install/action.yaml
@@ -1,5 +1,10 @@
 name: "My Shared Steps"
 description: "Doing yarn installs with propper caching"
+inputs:
+  install-path:
+    description: "The path to install dependencies in"
+    required: false
+    default: "."
 runs:
   using: "composite"
   steps:
@@ -20,6 +25,7 @@ runs:
           ${{ runner.os }}-yarn-
 
     - name: 'Installing Dependencies'
+      working-directory: ${{ inputs.install-path }}
       run: yarn install --immutable --inline-builds
       shell: bash
       env:
