--- a/.github/workflows/push-to-cdn.yml
+++ b/.github/workflows/push-to-cdn.yml
@@ -36,6 +36,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'Altinn/altinn-cdn'
+          branch: 'chore/studio'
           token: ${{secrets.ALTINN_CDN_TOKEN}}
           path: cdn
 
