--- a/.github/workflows/push-to-cdn.yml
+++ b/.github/workflows/push-to-cdn.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           bash .github/scripts/push-to-cdn.sh \
            --frontend ./frontend \
-           --cdn ../../cdn \
+           --cdn ../cdn \
            --commit \
 
       - name: Push to CDN
